# UILib

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.c  run.sh
.zed/: debug.json
lib/: CMakeLists.txt
lib/api/gumball/: gumball.h  gumball_backend.h  gumball_elements.h  gumball_general.h  gumball_logger.h  gumball_manager.h  gumball_types.h
lib/api/gumball/elements/: gumball_button.h  gumball_container.h  gumball_controller.h  gumball_root.h  gumball_widget.h
lib/api/gumball/ifaces/: gumball_iresource.h
lib/api/gumball/types/: gumball_color.h  gumball_event.h  gumball_font.h  gumball_rectangle.h  gumball_renderer.h  gumball_texture.h  gumball_vector2.h
lib/api/ui/: ui.h  ui_elements.h  ui_general.h  ui_types.h
lib/api/ui/elements/: ui_button.h  ui_container.h  ui_controller.h  ui_root.h  ui_widget.h
lib/api/ui/types/: ui_font.h  ui_texture.h
lib/src/: gumball_general.c  gumball_manager.c  ui_general.c
lib/src/backends/: gumball_backend_SDL3.c  gumball_backend_raylib.c
lib/src/elements/: gumball_container.c  gumball_controller.c  gumball_root.c  gumball_widget.c  ui_button.c  ui_container.c  ui_controller.c  ui_root.c  ui_widget.c
lib/src/ifaces/: gumball_iresource.c
lib/src/types/: gumball_font.c  gumball_texture.c  gumball_vector2.c  ui_event.c  ui_font.c  ui_texture.c
src/: ui.h  ui_button.c  ui_button.h  ui_buttonevent.c  ui_buttonevent.h  ui_container.c  ui_container.h  ui_controller.c  ui_controller.h  ui_event.c  ui_event.h  ui_font.c  ui_font.h  ui_general.c  ui_general.h  ui_internal.c  ui_internal.h  ui_root.c  ui_root.h  (+3 more)
